# ifx_driver

./: CMakeLists.txt  README.md
ComLib_C_Interface/: CMakeLists.txt
ComLib_C_Interface/src/: Protocol_KnownEndpoints.h
driver_app/: CMakeLists.txt  ifx_app.c  ifx_driver.c  ifx_driver.h
test_app/: CMakeLists.txt  Makefile  cmake_install.cmake  doit  test_app  test_app.c
